--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 </head>
 
 <body>
-    <h1>Website coming soon!</h1>
+    <h1>World of Cats - Coming soon!</h1>
+    <script src="assets/particles.min.js"></script>
+    <script src="assets/script.js"></script>
 </body>
 
 </html>
