--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
 </head>
 
 <body>
-    <h1>World of Cats - Coming soon!</h1>
-    <script src="assets/particles.min.js"></script>
-    <script src="assets/script.js"></script>
+    <div id="particles-js">
+        <h1>World of Cats - Coming soon!</h1>
+        <script src="assets/particles.min.js"></script>
+        <script src="assets/script.js"></script>
+    </div>
 </body>
 
 </html>
