--- a/cards.html
+++ b/cards.html
@@ -22,14 +22,17 @@
     <div id="particles-js">
         <a href="/"><img class="homeicon" src="assets/logo.png"></a><br>
         <h1>World of Cats</h1>
-        <h2>Cat Themed NFTs</h2>
-        <a href="/cards"><button class="button">Cards List</button></a>
-        <br><br>
-        <h3>Universal Format:</h3>
-        <img style="width: 378px;height:260px;" src="assets/format.png"><br>
-        <a href="https://discord.gg/jUmExFss9j"><img class="sm" src="assets/sm/discord.png"></a>
-        <a href="https://reddit.com/r/worldsofcats"><img class="sm" src="assets/sm/reddit.png"></a>
-        <a href="https://wax.atomichub.io/explorer/collection/worldsofcats"><img class="sm" src="assets/sm/atomichub.png"></a>
+        <h2>Cards List</h2>
+        <h3>Color of circle at top right shows rarity!</h3>
+        <ul>
+            <li>Sky Blue - LEGENDARY - 10 Mints</li>
+            <li>Green - EPIC - 50 Mints</li>
+            <li>Navy Blue - RARE - 100 Mints</li>
+            <li>Yellow - UNCOMMON - 500 Mints</li>
+        </ul>
+        <br>
+        <img class="cards" src="assets/cards/1.png">
+        <h3>Card #1 Magical Cat - <a href="https://wax.atomichub.io/market?collection_name=worldsofcats&schema_name=cats&template_id=290697"><button class="cardbutton">View on Market</button></a></h3>
         <script src="assets/particles.min.js"></script>
         <script src="assets/script.js"></script>
     </div>
